WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87804
Fix inefficient usage of traverseNextNode()
https://bugs.webkit.org/show_bug.cgi?id=87804
Summary
Fix inefficient usage of traverseNextNode()
Kent Tamura
Reported
2012-05-29 18:23:07 PDT
See
https://bugs.webkit.org/show_bug.cgi?id=86534#c49
Attachments
Patch
(2.85 KB, patch)
2012-05-29 18:29 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.85 KB, patch)
2012-05-29 18:38 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2012-05-29 18:29:38 PDT
Created
attachment 144668
[details]
Patch
Kent Tamura
Comment 2
2012-05-29 18:38:18 PDT
Created
attachment 144669
[details]
Patch for landing fix typos
WebKit Review Bot
Comment 3
2012-05-29 21:03:25 PDT
Comment on
attachment 144669
[details]
Patch for landing Clearing flags on attachment: 144669 Committed
r118888
: <
http://trac.webkit.org/changeset/118888
>
WebKit Review Bot
Comment 4
2012-05-29 21:03:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug