Fix inefficient usage of traverseNextNode() https://bugs.webkit.org/show_bug.cgi?id=87804

Reviewed by Ryosuke Niwa.

foo->traverseNextNode(foo) is equivalent to foo->firstChild(), and
firstChild() is more efficient.

No new tests because of no behavior change.

* html/HTMLFieldSetElement.cpp:
(WebCore::HTMLFieldSetElement::invalidateDisabledStateUnder):
Replace traverseNextNode() with firstChild(), and shorten a variable name.
* svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::getElementById):
Replace traverseNextNode() with firstChild().


Canonical link: https://commits.webkit.org/105612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118888 268f45cc-cd09-0410-ab3c-d52691b4dbfc